# libidn2

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Makefile.am  NEWS  bootstrap.conf  cfg.mk  configure.ac
doc/: Makefile.am  gdoc  libidn2.texi
examples/: Makefile.am  lookup.c  register.c
fuzz/: Makefile.am  README.md  get_ossfuzz_corpora
gl/top/: README-release.diff
lib/: Makefile.am  bidi.c  bidi.h  context.c  context.h  data.h  decode.c  error.c  free.c  gendata.c  gentr46map.c  idn2.h.in  idn2.map  idna.c  idna.h  lookup.c  punycode.c  register.c  tables.c  tables.h  tr46map.h  version.c
po/: fi.po.in  ka.po.in  pt_BR.po.in
src/: Makefile.am  idn2.c  idn2.ggo
tests/: Makefile.am  gen-idn-tld-tv.pl  gen-utc-test.pl  standalone.sh  test-IdnaTest-inc.c  test-IdnaTest-txt.c  test-IdnaTestV2-txt.c  test-compat-punycode.c  test-idn2.sh  test-locale.c  test-lookup.c  test-punycode.c  test-register.c  test-version.c
